Pestana guardar arreglada2

--- a/templates/buscar.html
+++ b/templates/buscar.html
@@ -5,8 +5,8 @@ Bienvenido
 {% endblock %}
 {% block body %}
 
-<p>guardar</p>
-
+<h2 class="espacio">Buscar paciente</h2>   
+<h3 class="espacio">Por Nombre, Cedula o Indice de bloque</h3>
 <form class="form-group" action="{{ url_for('buscar') }}"  method="post">
   <div class="form-group">
   <label class="label required espacio" for="name">Nombre Completo</label>
