--- a/templates/minar.html
+++ b/templates/minar.html
@@ -5,9 +5,8 @@ Bienvenido
 {% endblock %}
 {% block body %}
 
-<p>guardar</p>
-
-
+<h2 class="espacio">Pacientes en espera </h2>   
+<h3 class="espacio">Seleccionar uno para confirmar</h3>
   <div id="block">
 
     {% for i in range(info|length) %}
