--- a/static/css/block.css
+++ b/static/css/block.css
@@ -36,5 +36,17 @@ tr:hover td{
 }
 .letras,.tam{
   width: 400px;
+}
 
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
