--- a/templates/guardar.html
+++ b/templates/guardar.html
@@ -4,85 +4,86 @@ Guardar
 
 {% endblock %}
 {% block body %}
-<p>guardar</p>
-{% if success==1 %}
-  <p>Se agrego, para confirmacion</p>
-{% endif %}
-{% if success==0 %}
-  <p>Hubo un problema, cliente parece que ya existe el paciente</p>
-{% endif %}
-<form class="form has-magic-focus" action="{{ url_for('guardar') }}"  method="post">
-  <p class="field required">
-    <label class="label required" for="name">Nombre Completo</label>
-    <input class="text-input" id="name" name="name" required="" type="text" >
-  </p>
-  <p class="field required half">
-    <label class="label" for="email">E-mail</label>
-    <input class="text-input" id="email" name="email" required="" type="email">
-  </p>
-  <p class="field half">
-    <label class="label" for="phone">Phone</label>
-    <input class="text-input" id="phone" name="phone" type="phone">
-  </p>
-  <p class="field half required error">
-    <label class="label" for="login">Cedula</label>
-    <input class="text-input" id="login" name="cedula" required="" type="text" >
-  </p>
-  <div class="field">
-    <label class="label">Enfermedades</label>
-    <ul class="checkboxes">
-      <li class="checkbox">
-        <input class="checkbox-input" id="choice-0" name="enfermedad0" type="checkbox" value="Alergia a la penicilina">
-        <label class="checkbox-label" for="choice-0">Alergia a la penicilina</label>
-      </li>
-      <li class="checkbox">
-        <input class="checkbox-input" id="choice-1" name="enfermedad1" type="checkbox" value="Alergia con anticonvulsivos">
-        <label class="checkbox-label" for="choice-1">Alergia con anticonvulsivos</label>
-      </li>
-      <li class="checkbox">
-        <input class="checkbox-input" id="choice-2" name="enfermedad2" type="checkbox" value="Sufre de diabetes">
-        <label class="checkbox-label" for="choice-2">Sufre de diabetes</label>
-      </li>
-      <li class="checkbox">
-        <input class="checkbox-input" id="choice-3" name="enfermedad3" type="checkbox" value="Sufre de hipertensión">
-        <label class="checkbox-label" for="choice-3">Sufre de hipertensión</label>
-      </li>
-      <li class="checkbox">
-        <input class="checkbox-input" id="choice-4" name="enfermedad4" type="checkbox" value="Sufre de cancer">
-        <label class="checkbox-label" for="choice-4">Sufre de cancer</label>
-      </li>
-    </ul>
+
+  {% if success==0 %}
+    <h3 class="espacio">Hubo un problema, cliente parece que ya existe el paciente</h3>
+  {% elif success==1 %}
+    <h3 class="espacio">Se agrego, para confirmacion</h3>   
+  {% elif success==2 %}
+    <h3 class="espacio">Ingrese datos de paciente</h3>   
+  {% endif %}
+
+<form class="form-group" action="{{ url_for('guardar') }}"  method="post">
+  <div class="form-group">
+    <label class="label required espacio" for="name">Nombre Completo</label>
+    <input class="form-control letras" id="name" name="name" required="" type="text" pattern="[a-zA-Z]*\s[a-zA-Z]*"  placeholder="Solo letras EX: Pedro Rosa">
   </div>
-  <div class="field">
-    <label class="label">Aptitudes</label>
-    <ul class="options">
-      <li class="option">
-        <input class="option-input" id="option-0" name="option" type="radio" value="Masculino">
-        <label class="option-label" for="option-0">Masculino</label>
-      </li>
-      <li class="option">
-        <input class="option-input" id="option-1" name="option" type="radio" value="Femenino">
-        <label class="option-label" for="option-1">Femenino</label>
-      </li>
-    </ul>
+
+  <div class="form-group">
+    <label class="label espacio" for="email">E-mail</label>
+    <input class="form-control tam" id="email" name="email" required="" type="email" placeholder="ejemplo@dominio.com">
   </div>
-  <p class="field">
-  <label class="label" for="about">Detalles extras, medicamentos, antencedentes</label>
-  <textarea class="textarea" cols="50" id="about" name="about" rows="4"></textarea>
-  </p>
-  <p class="field half">
-  <label class="label" for="select">Position</label>
-  <select class="select hasCustomSelect" id="select" style="-webkit-appearance: menulist-button; width: 399px; position: absolute; opacity: 0; height: 53px; font-size: 20px;">
-  <option selected="" value=""></option>
-  <option value="ceo">CEO</option>
-  <option value="front-end">Front-end developer</option>
-  <option value="back-end">Back-end developer</option>
-  </select><span class="customSelect select" style="display: inline-block;"><span class="customSelectInner" style="width: 359px; display: inline-block;">&nbsp;</span></span>
-  </p>
-  <p class="field half">
-  <input class="button" type="submit" value="Send">
-  </p>
-  <div class="magic-focus" style=""></div>
+
+  <div class="form-group">
+    <label class="label espacio" for="phone">Phone</label>
+    <input class="form-control tam" id="phone" name="phone" required="" type="number" placeholder="Ex:0999999999">
+  </div>
+  <div class="form-group">
+    <label class="label espacio" for="login">Cedula</label>
+    <input class="form-control tam" id="login" name="cedula" required="" type="number" placeholder="Ex: 1234567890">
+  </div>
+
+
+
+  <div class="form-check">
+    <label class="">Enfermedades</label>
+    <br>
+    <div class="form-check espacio form-check-inline">
+        <input class="form-check-input" id="choice-0" name="enfermedad0" type="checkbox" value="Alergia a la penicilina">
+        <label class="form-check-label" for="choice-0">Alergia a la penicilina</label>
+    </div>
+    <div class="form-check espacio form-check-inline">
+        <input class="form-check-input" id="choice-1" name="enfermedad1" type="checkbox" value="Alergia con anticonvulsivos">
+        <label class="form-check-label" for="choice-1">Alergia con anticonvulsivos</label>
+    </div>
+    <div class="form-check espacio form-check-inline">  
+        <input class="form-check-input" id="choice-2" name="enfermedad2" type="checkbox" value="Sufre de diabetes">
+        <label class="form-check-label" for="choice-2">Sufre de diabetes</label>
+      </div>
+      <div class="form-check espacio form-check-inline">
+        <input class="form-check-input" id="choice-3" name="enfermedad3" type="checkbox" value="Sufre de hipertensión">
+        <label class="form-check-label" for="choice-3">Sufre de hipertensión</label>
+      </div>
+      <div class="form-check espacio form-check-inline">
+        <input class="form-check-input" id="choice-4" name="enfermedad4" type="checkbox" value="Sufre de cancer">
+        <label class="form-check-label" for="choice-4">Sufre de cancer</label>
+      </div>
+    </div>
+
+    <div class="form-check ">      
+    <label class="espacio">Aptitudes</label>
+    <br>
+    <div class="form-check espacio form-check-inline">
+        <input class="form-check-input" id="option-0" name="option" type="radio" value="Masculino">
+        <label class="form-check-label" for="option-0">Masculino</label>
+    </div>
+    <div class="form-check espacio form-check-inline">
+        <input class="form-check-input" id="option-1" name="option" type="radio" value="Femenino">
+        <label class="form-check-label" for="option-1">Femenino</label>
+    </div>
+    </div>
+
+
+
+  <div class="form-group espacio">
+    <label for="about">Detalles extras, medicamentos, antencedentes</label>
+    <textarea class="form-control" id="about" name="about" cols="50" rows="3"></textarea>
+  </div>
+
+
+  <button type="submit" class="btn btn-primary espacio" pla>Submit</button>
+
+
 </form>
 
 {% endblock %}
