--- a/templates/guardar.html
+++ b/templates/guardar.html
@@ -75,9 +75,11 @@ Guardar
 
 
 
-  <div class="form-group espacio">
-    <label for="about">Detalles extras, medicamentos, antencedentes</label>
-    <textarea class="form-control" id="about" name="about" cols="50" rows="3"></textarea>
+  <div class="form-group espacio" >
+    <label for="about">Detallesss extras, medicamentos, antencedentes</label>
+    <!-- <textarea class="form-control" id="about" name="about"  rows="5" width="200px"></textarea> -->
+    <br>
+    <textarea class=" " id="about" name="about"   ></textarea>
   </div>
 
 
