--- a/static/css/block.css
+++ b/static/css/block.css
@@ -1,5 +1,5 @@
 #block{
-  margin: 20px 20px 20px 20px;
+  margin: 40px 20px 20px 20px;
   width: 70%;
 }
 table{
@@ -31,9 +31,13 @@ tr:hover td{
 
 
 .tam,.letras,.espacio{
-
+  
   margin: 10px;
 }
+.masEsp{
+  margin-top: 20px;
+}
+
 .letras,.tam{
   width: 400px;
 }
@@ -49,4 +53,13 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+textarea {
+  margin: 10px;
+  width:700px;
+  height:150px;
+  /* border-color : rgb(218, 218, 218); */
+  border: 1px solid #c9cfd1;
+  /* border: 10px; */
 }
