Por el momento finalizado, la mayoria:'D

--- a/templates/bienvenido.html
+++ b/templates/bienvenido.html
@@ -4,5 +4,16 @@ Bienvenido
 
 {% endblock %}
 {% block body %}
-<p>Bienvenido, a tu historial medico seguro</p>
+<h1 class="espacio">Bienvenido, a tu historial medico seguro</h1>
+
+<div class="center ">
+    <h3 class="display-4">Mision</h3>
+    <p class="lead">Realizar un sistema de Historial medico de pacientes, sencillo pero seguro inspirado en blockchain.
+        A la vez que practico y recuerdo html,css,python, flask. </p>
+  </div>
+  <div class=" center ">
+    <h3 class="display-4">Vision</h3>
+    <p class="lead"> Mejorarlo implementando DataBase, otros idiomas, un registro de Usuarios y sistema responsive.</p>  
+  </div>
+
 {% endblock %}
