--- a/static/css/block.css
+++ b/static/css/block.css
@@ -63,3 +63,44 @@ textarea {
   border: 1px solid #c9cfd1;
   /* border: 10px; */
 }
+
+
+
+.alert {
+  padding: 20px;
+  background-color: #f44336;
+  color: white;
+}
+.success {
+  padding: 20px;
+  background-color: #57a05d;
+  color: white;
+}
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
+
+
+.lead {
+  /* width: 600px; */
+  text-align: center;
+  }
+  .center {
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom : 30px;
+    width: 600px;
+    border: 3px solid #18bbbb;
+    padding: 25px;
+  }
